--- a/public/src/assets/scss/common/base_list/_variables.scss
+++ b/public/src/assets/scss/common/base_list/_variables.scss
@@ -15,6 +15,8 @@ $ft_small: 18px;
 $ft_xsmall: 14px;
 
 $breakpoints: (
+  'extraXS':  320px,
+  'extraS':  420px,
   'small':  540px,
   'medium': 720px,
   'large':  960px,
