--- a/public/src/assets/scss/pages/category/play_detail.scss
+++ b/public/src/assets/scss/pages/category/play_detail.scss
@@ -4,7 +4,13 @@
   margin-top: 130px;
 
   &__title {
-    font-size: $ft_pgTitle;
+    @include respond-to('medium'){
+      font-size: $ft_title;
+    }
+    @include respond-to('extraL'){
+      font-size: $ft_pgTitle;
+    }
+    font-size: $ft_large;
     line-height: 1.3;
   }
 
@@ -15,6 +21,7 @@
 
   &__poster {
     display: block;
+    width: 100%;
     max-width: 340px;
     margin: auto;
   }
