--- a/views/common/components/partial/header.ejs
+++ b/views/common/components/partial/header.ejs
@@ -1,5 +1,12 @@
 <nav class="navbar navbar-expand-lg header__nav ">
-  <div class="navbar-collapse">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon">
+      <i class="material-icons">
+        menu
+      </i>
+    </span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarToggler">
     <ul class="navbar-nav justify-content-start mr-auto">
       <li class="nav-item">
         <a class="nav-link ft-white header__link strong" href="/">Home</a>
