fix api request error

--- a/views/pages/category/movie_list.ejs
+++ b/views/pages/category/movie_list.ejs
@@ -48,7 +48,7 @@
             <% ratedMovieData.map(list => { %>
               <div class="swiper-slide">
                 <a href="/movie/detail/<%= list.id %>" class="link-blcok">
-                  <img src="https://yts.tl<%= list.medium_cover_image %>" alt="<%= list.title%>">                 
+                  <img src="<%= list.medium_cover_image %>" alt="<%= list.title%>">                 
                 </a>
               </div>
             <% }) %>
@@ -77,8 +77,8 @@
           <div class="swiper-wrapper">
             <% recommendMovieData.map(list => { %>
               <div class="swiper-slide">
-                <a href="/movie/detail" class="link-blcok">
-                  <img src="https://yts.tl<%= list.medium_cover_image %>" alt="<%= list.title%>">                 
+                <a href="/movie/detail/<%= list.id %>" class="link-blcok">
+                  <img src="<%= list.medium_cover_image %>" alt="<%= list.title%>">                 
                 </a>
               </div>
             <% }) %>
