--- a/views/index.ejs
+++ b/views/index.ejs
@@ -50,7 +50,7 @@
           <% ratedMovieData.map(list => { %>
           <div class="swiper-slide">
             <a href="/movie/detail/<%= list.id %>" class="link-blcok">
-              <img src="https://yts.tl<%= list.medium_cover_image %>" alt="<%= list.title%>">
+              <img src="<%= list.medium_cover_image %>" alt="<%= list.title%>">
             </a>
           </div>
           <% }) %>
